$Id$

2013-02-23  Christian Franke  <franke@computer.org>

	drivedb.h: Crucial/Micron RealSSD C300: Remove bogus trailing '|' from
	regex (Regression from r3772).

2013-02-16  Douglas Gilbert  <dgilbert@interlog.com>

	scsicmds.h, scsicmds.cpp, scsiprint.h, scsiprint.cpp:
	- for SCSI disks, in 'smartctl --info' report physical
	  block size and lowest LBA alignement (if PB size
	  different from LB size); logical block provisioning
	  status (if any); and disk protection (a.k.a. DIF) type

2013-02-19  Alex Samorukov  <samm@os2.kiev.ua>

	atacmds.cpp: fixed scttemphist on LE machines, including PPC. Patch
	and report provided by Roger Roehrig.

2013-02-16  Douglas Gilbert  <dgilbert@interlog.com>

	scsicmds.h, scsicmds.cpp, scsiprint.h, scsiprint.cpp:
	- SCSI VPD work; improve rotation rate reporting and add form factor

2013-02-14  Christian Franke  <franke@computer.org>

	drivedb.h:
	- SandForce Driven SSDs: Kingston V+ 200, Mushkin Chronos deluxe,
	  OCZ Talos 2
	- Plextor M3 (Pro) Series SSDs

2013-02-13  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron RealSSD C300: new separate entry
	- Crucial/Micron RealSSD m4/C400: firmware bug warning

2013-02-10  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: adding device type fix for devices on MPT controllers.

2013-02-06  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Seagate Samsung SpinPoint M8U (USB)
	- Hitachi/HGST Travelstar Z5K500
	- Hitachi/HGST Travelstar 5K750
	- Hitachi/HGST Deskstar 7K4000
	- Toshiba 2.5" HDD MK..37GSX
	- Toshiba 2.5" HDD MK..65GSX: GSXN variant
	- Toshiba 2.5" HDD MQ01ABD...
	- Seagate Momentus 7200.5
	- Western Digital Caviar Green (AF, SATA 6Gb/s): 2TB
	- USB: Samsung M3 Portable USB 3.0 (0x04e8:0x61b6)
	- USB: LaCie Rugged Mini USB 3.0 (0x059f:0x1051)
	- Change short attribute names required before r3343.

2013-02-05  Christian Franke  <franke@computer.org>

	smartd.cpp: Fix allocation of buffer passed to putenv().